--- a/Form-Validator/style.css
+++ b/Form-Validator/style.css
@@ -71,4 +71,25 @@ h2 {
 
 .form-control small {
     color: var(--error-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
+
+.form-control.error small {
+    visibility: visible;
+}
+
+.form button {
+    cursor: pointer;
+    background-color: blue;
+    border: 2px solid blue;
+    border-radius: 4px;
+    color: white;
+    display: block;
+    font-size: 16px;
+    padding: 10px;
+    margin-top: 20px;
+    width: 100%;
 }
